--- a/node/package.json
+++ b/node/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "devDependencies": {}
+    "express": "^4.18.2",
+    "mysql": "^2.18.1"
+  }
 }
